# ivy

./: .gitignore  CHANGELOG.md  Dockerfile  docker-compose.yaml
.github/: .release-please-config.json  .release-please-manifest.json
.github/workflows/: build-and-push.yml  release.yml
backend/: alembic.ini  entrypoint.sh  pyproject.toml
backend/ivy/: common_constants.py  main.py  webserver.py
backend/ivy/api/: item_router.py  location_router.py  tag_router.py
backend/ivy/database/: database_manager.py  db.py  migration_runner.py
backend/ivy/database/migrations/: env.py
backend/ivy/database/migrations/versions/: 001_initial_migration.py
backend/ivy/models/: item_model.py  location_model.py  tag_model.py
backend/ivy/models/db_models/: item.py  item_attachment_mappings.py  item_tag.py  location.py  tag.py
backend/ivy/repositories/: item_repository.py
backend/ivy/services/: file_storage_service.py  item_service.py  location_service.py  tag_service.py
backend/migrations/: 001_initial_tables.sql  002_add_cascade_for_items.sql
frontend/: CHANGELOG.md  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: IvySidebar.tsx  Logo.tsx  TopBar.tsx
frontend/src/components/ui/: tooltip.tsx
frontend/src/features/items/hooks/: useItems.ts
frontend/src/lib/: utils.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/items/: index.tsx
frontend/src/routes/locations/: index.tsx
frontend/src/routes/search/: index.tsx
frontend/src/routes/settings/: index.tsx
frontend/src/routes/tags/: index.tsx
(+9 files in other folders)
