[project]
name = "ivy-backend"
version = "0.2.1"
description = "Backend for the ivy inventory management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.128.0",
    "greenlet>=3.4.0",
    "python-multipart>=0.0.21",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn>=0.40.0",
]
